--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  MotionCommand.srv
+  TaskPlanning.srv
 )
 
 ## Generate actions in the 'action' folder
