--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,11 @@
         "/home/mingyu/catkin_ws/devel/lib/python3/dist-packages",
         "/home/mingyu/catkin_build_ws/devel/lib/python2.7/dist-packages",
         "/opt/ros/melodic/lib/python2.7/dist-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/mingyu/cvbridge_build_ws/install/lib/python3/dist-packages",
+        "/home/mingyu/catkin_ws/devel/lib/python3/dist-packages",
+        "/home/mingyu/catkin_build_ws/devel/lib/python2.7/dist-packages",
+        "/opt/ros/melodic/lib/python2.7/dist-packages"
     ]
 }
